# poker-bot

./: .env.default  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  pyproject.toml  ruff.toml  setup.cfg
bot/: __main__.py  app.py  settings.py
bot/db/: session.py
bot/handlers/: routers.py
bot/handlers/welcome/: fsm.py  handlers.py
bot/internal/enums/: base.py  welcome.py
bot/internal/texts/: welcome.py
bot/keyboards/: welcome.py
migration/: env.py
