[project]
name = "poker_bot"
version = "0.1.0"
description = "Scoring bot for home using"
authors = [
    { name = "a.kazachinskiy", email = "kazachinskii.a@gmail.com" },
]
dependencies = [
    "aiogram>=3.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.isort]
line_length = 90
force_grid_wrap = 2
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true

plugins = [
    "pydantic.mypy",
]

[[tool.pydantic-mypy.overrides]]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.6.9",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pre-commit>=4.0.0",
]



